--- a/app/views/followers.html.erb
+++ b/app/views/followers.html.erb
@@ -1,12 +1,19 @@
 <!DOCTYPE html>
 <html>
   <head>
-  <title>Followers | Tweeter</title>
+  <title>Followers of <%= @user.username %> | Tweeter</title>
   </head>
   <body>
+    <nav>
+      <a href="/show?id=<%= @user.id %>">Home</a>
+      <a href="/followers?id=<%= @user.id %>">Followers</a>
+      <a href="/following?id=<%= @user.id %>">Following</a>
+      <a href="/register">Register</a>
+    </nav>
+    <h1>Followers:</h1>
     <ul>
       <% @followers.each do |follower| %>
-      <li><%= follower.full_name %></li>
+      <li><a href="/show?id=<%= follower.id %>">@<%= follower.username %></a></li>
       <% end %>
     </ul>
   </body>
