--- a/app/views/following.html.erb
+++ b/app/views/following.html.erb
@@ -1,12 +1,19 @@
 <!DOCTYPE html>
 <html>
   <head>
-  <title>Following | Tweeter</title>
+  <title>People <%= @user.username %> follows | Tweeter</title>
   </head>
   <body>
+    <nav>
+      <a href="/show?id=<%= @user.id %>">Home</a>
+      <a href="/followers?id=<%= @user.id %>">Followers</a>
+      <a href="/following?id=<%= @user.id %>">Following</a>
+      <a href="/register">Register</a>
+    </nav>
+    <h1>Following:</h1>
     <ul>
       <% @following.each do |followed| %>
-      <li><%= followed.full_name %></li>
+      <li><a href="/show?id=<%= followed.id %>">@<%= followed.username %></a></li>
       <% end %>
     </ul>
   </body>
