--- a/app/views/show.html.erb
+++ b/app/views/show.html.erb
@@ -1,21 +1,23 @@
 <!DOCTYPE html>
 <html>
   <head>
+   <link href="css/reset.css" rel="stylesheet">
     <title><%= @user.full_name %> | Tweeter</title>
   </head>
   <body>
-    <nav>
-      <a href="/show?id=<%= @user.id %>">Home</a>
-      <a href="/followers?id=<%= @user.id %>">Followers</a>
+    <nav class="main-nav">
+      <a href="/show?id=<%= @user.id %>" id="asd">Home</a>
+      <a href="/followers?id=<%= @user.id %>" id="asd">Followers</a>
       <a href="/following?id=<%= @user.id %>">Following</a>
       <a href="/register">Register</a>
     </nav>
     <h1>Profile</h1>
-    <p>
-      <img src="http://www.projectiv.co/wp-content/uploads/2013/12/placeholder.png" alt="Profile picture"/>
+    <section>
+      <img src="http://www.projectiv.co/wp-content/uploads/2013/12/placeholder.png" alt="Profile picture" id="profile-pic"/>
       <p><%= @user.full_name %></p>
       <p>@<%= @user.username %></p>
       <p>location: <%= @user.location %></p>
-    </p>
+      <a href="/">asd</a>
+    </section>
   </body>
 </html>
