Refactor routing and apply to user controller

--- a/app/views/register.html.erb
+++ b/app/views/register.html.erb
@@ -8,7 +8,7 @@
       <a href="/">Home</a>
       <a href="/register">Register</a>
     </nav>
-      <form method="post" action="/test">
+      <form method="post" action="/register">
           username:<input type="text" name="username"><br/>
           email:<input type="email" name="email"><br/>
           first name:<input type="text" name="first_name"><br/>
