--- a/app/public/css/reset.css
+++ b/app/public/css/reset.css
@@ -56,7 +56,7 @@ nav a, p {
 }
 
 body {
-    background-image:url("http://wdl.tmimgcdn.com/img_articles/14881/site-background-pattern-07.jpg");
+    /*background-image:url("http://wdl.tmimgcdn.com/img_articles/14881/site-background-pattern-07.jpg");*/
     background-repeat:repeat-x;
     background-color:gray;
 }
@@ -66,7 +66,7 @@ section {
     text-align:center;
     height:300px;
     width:300px;
-    background-color:#7127BA;
+    /*background-color:#7127BA;*/
     text-overflow:ellipsis;
     opacity:0.4;
 }
