--- a/app/views/following.html.erb
+++ b/app/views/following.html.erb
@@ -8,7 +8,8 @@
       <a href="/show?id=<%= @user.id %>">Home</a>
       <a href="/followers?id=<%= @user.id %>">Followers</a>
       <a href="/following?id=<%= @user.id %>">Following</a>
-      <a href="/register">Register</a>
+      <a href="/upload">Test upload</a>
+      <a href="/logout">Logout</a>
     </nav>
     <h1>Following:</h1>
     <ul>
