--- a/app/views/register.html.erb
+++ b/app/views/register.html.erb
@@ -6,6 +6,7 @@
   <body>
     <nav>
       <a href="/">Home</a>
+      <a href="/login">Login</a>
       <a href="/register">Register</a>
     </nav>
       <form method="post" action="/register">
