--- a/app/views/show.html.erb
+++ b/app/views/show.html.erb
@@ -9,7 +9,8 @@
       <a href="/show?id=<%= @user.id %>" id="asd">Home</a>
       <a href="/followers?id=<%= @user.id %>" id="asd">Followers</a>
       <a href="/following?id=<%= @user.id %>">Following</a>
-      <a href="/register">Register</a>
+      <a href="/upload">Test upload</a>
+      <a href="/logout">Logout</a>
     </nav>
     <h1>Profile</h1>
     <section>
